# playground-ros2

./: README.md  turtlesim.yaml
install/: local_setup.sh  setup.sh
install/msg_srv_action_interface_example/include/msg_srv_action_interface_example/action/: arithmetic_checker.h  arithmetic_checker.hpp
install/msg_srv_action_interface_example/include/msg_srv_action_interface_example/msg/: arithmetic_argument.h  arithmetic_argument.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/msg_srv_action_interface_example/include/msg_srv_action_interface_example/srv/: arithmetic_operator.h  arithmetic_operator.hpp
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/action/: ArithmeticChecker.action  ArithmeticChecker.idl
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  msg_srv_action_interface_exampleConfig-version.cmake  msg_srv_action_interface_exampleConfig.cmake  msg_srv_action_interface_example__rosidl_generator_cExport.cmake  msg_srv_action_interface_example__rosidl_generator_cppExport.cmake  msg_srv_action_interface_example__rosidl_typesupport_cExport-noconfig.cmake  msg_srv_action_interface_example__rosidl_typesupport_cExport.cmake  msg_srv_action_interface_example__rosidl_typesupport_cppExport-noconfig.cmake  msg_srv_action_interface_example__rosidl_typesupport_cppExport.cmake  msg_srv_action_interface_example__rosidl_typesupport_introspection_cExport.cmake  msg_srv_action_interface_example__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/my_first_ros_rclcpp_pkg/share/my_first_ros_rclcpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_ros_rclpy_pkg/share/my_first_ros_rclpy_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_rqt_plugin_pkg/share/my_first_rqt_plugin_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh  plugin.xml
install/time_rclcpp_example/share/time_rclcpp_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/time_rclcpp_example/share/time_rclcpp_example/environment/: path.dsv  (+1 more)
install/time_rclpy_example/share/time_rclpy_example/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/topic_service_action_rclcpp_example/share/topic_service_action_rclcpp_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/topic_service_action_rclpy_example/share/topic_service_action_rclpy_example/: package.sh  package.xml
key_box/enclaves/: governance.p7s  governance.xml
key_box/enclaves/talker_listener/listener/: cert.pem  key.pem  permissions.p7s  permissions.xml
key_box/enclaves/talker_listener/talker/: cert.pem  key.pem  permissions.p7s  permissions.xml
key_box/private/: ca.key.pem
key_box/public/: ca.cert.pem
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/msg_srv_action_interface_example/: CMakeLists.txt  package.xml
src/msg_srv_action_interface_example/msg/: ArithmeticArgument.msg
src/my_first_ros_rclcpp_pkg/: CMakeLists.txt  package.xml
src/my_first_ros_rclcpp_pkg/src/: helloworld_publisher.cpp  helloworld_subscriber.cpp
src/my_first_ros_rclpy_pkg/: package.xml  setup.py
src/my_first_ros_rclpy_pkg/my_first_ros_rclpy_pkg/: helloworld_publisher.py  helloworld_subscriber.py
src/my_first_rqt_plugin_pkg/: CMakeLists.txt  package.xml  plugin.xml
src/my_first_rqt_plugin_pkg/launch/: turtlesim.launch.py
src/my_first_rqt_plugin_pkg/scripts/: my_first_rqt_plugin_pkg
src/my_first_rqt_plugin_pkg/src/my_first_rqt_plugin_pkg/: examples.py  examples_widget.py
src/topic_service_action_rclcpp_example/: CMakeLists.txt  package.xml
src/topic_service_action_rclcpp_example/launch/: arithmetic.launch.py
src/topic_service_action_rclpy_example/: package.xml  setup.py
time_rclcpp_example/: CMakeLists.txt  package.xml
time_rclcpp_example/src/: main.cpp
time_rclpy_example/: package.xml  setup.py
time_rclpy_example/time_rclpy_example/time_example/: main.py
(+84 files in other folders)
