<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_first_rqt_plugin_pkg</name>
  <version>0.6.0</version>
  <description>ROS 2 example for RQt plugin</description>
  <maintainer email="redgem92@gmail.com">Jisu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>python3-catkin-pkg-modules</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
